    tied ovs or linuxbridge agents to the neutron-server package (LP: #1548245).
  * d/control,neutron-{plugin-}linuxbridge-agent.*: Rename
    neutron-plugin-linuxbridge-agent -> neutron-linuxbridge-agent inline with
    other agent packages (LP: #1548244).
  * d/control: Add dependency on conntrack for openvswitch and linuxbridge
    packages (LP: #1514731).
  * d/tests/*: Refactor and reduce tests; ML2 is the only plugin now in neutron
    core, so no need to continue to carry infrastructure for testing other
    plugins.
  * d/control: Drop old Breaks/Replaces on quantum-* packages.

 -- James Page <james.page@ubuntu.com>  Mon, 22 Feb 2016 09:07:26 +0000

neutron (2:8.0.0~b2-0ubuntu4) xenial; urgency=medium

  * d/tests/linuxbridge-plugin, d/neutron-plugin-linuxbridge-agent.default:
    Correct the linuxbridge config file.
  * d/tests/*: Loop to check daemon status instead of sleep.

 -- Corey Bryant <corey.bryant@canonical.com>  Fri, 19 Feb 2016 08:11:38 -0500

neutron (2:8.0.0~b2-0ubuntu3) xenial; urgency=medium

  * d/tests/*: Adjust plugin tests to handle recent changes to /etc/default
    files.

 -- Corey Bryant <corey.bryant@canonical.com>  Fri, 12 Feb 2016 15:11:36 -0500

neutron (2:8.0.0~b2-0ubuntu2) xenial; urgency=medium

  * d/control: Set min version of python-debtcollector to 1.2.0 to fix failing
    tests.

 -- Corey Bryant <corey.bryant@canonical.com>  Tue, 09 Feb 2016 09:56:31 -0500

neutron (2:8.0.0~b2-0ubuntu1) xenial; urgency=medium

  * New upstream milestone for OpenStack Mitaka.
  * d/control: Align (build-)depends with upstream.
  * d/control: Set min version of python-debtcollector to 1.2.0 to fix failing
    tests.
  * d/control: Add git to build-depends for sphinx-build.
  * d/p/fix-db-migration.patch: Dropped. Fixed upstream.
  * d/rules: Generate config files with generate_config_file_samples.sh.
  * d/rules: Set PYTHONPATH when generating config files to pick up neutron
    entry points. Also drop .sample config file extensions.