@@ -21,4 +21,4 @@ NAME=${PROJECT_NAME}-linuxbridge-agent
 DAEMON=/usr/bin/neutron-linuxbridge-agent
 # --config-file=/etc/neutron/neutron.conf will be happened
 # to DAEMON_ARGS later by openstack-pkg-tools
-DAEMON_ARGS="--config-file=/etc/neutron/plugins/ml2/ml2_conf.ini --config-file=/etc/neutron/plugins/ml2/linuxbridge_agent.ini"
+DAEMON_ARGS="--config-file=/etc/neutron/plugins/ml2/linuxbridge_agent.ini"
