@@ -1,2 +1,3 @@
-etc/neutron/rootwrap.d/linuxbridge-plugin.filters etc/neutron/rootwrap.d
-usr/bin/neutron-linuxbridge-agent usr/bin
+etc/neutron/plugins/ml2/linuxbridge_agent.ini
+etc/neutron/rootwrap.d/linuxbridge-plugin.filters
+usr/bin/neutron-linuxbridge-agent
