@@ -17,4 +17,4 @@ DESC="Openstack Neutron Open vSwitch Agent"
 PROJECT_NAME=neutron
 NAME=${PROJECT_NAME}-openvswitch-agent
 DAEMON=/usr/bin/neutron-openvswitch-agent
-DAEMON_ARGS="--config-file=/etc/neutron/plugins/ml2/ml2_conf.ini --config-file=/etc/neutron/plugins/ml2/openvswitch_agent.ini"
+DAEMON_ARGS="--config-file=/etc/neutron/plugins/ml2/openvswitch_agent.ini"
