@@ -1,1 +1,1 @@
-etc/neutron/plugins/ml2/* etc/neutron/plugins/ml2
+etc/neutron/plugins/ml2/ml2* etc/neutron/plugins/ml2
