@@ -1,1 +1,2 @@
-usr/bin/neutron-sriov-nic-agent usr/bin
+etc/neutron/plugins/ml2/sriov_agent.ini
+usr/bin/neutron-sriov-nic-agent
